force-app/main/default/objects/Account_History__c/Account_History__c.object-meta.xml
<CustomObject>
    <label>Account History</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Account History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>