force-app/main/default/objects/Account_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Historys</relationshipLabel>
    <relationshipName>Account_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>