force-app/main/default/objects/Account_History__c/fields/Email_To__c.field-meta.xml
<CustomField>
    <fullName>Email_To__c</fullName>
    <label>Email To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>