force-app/main/default/objects/Account_History__c/fields/Final_Notice_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Notice Letter Sent</label>
    <type>Checkbox</type>
</CustomField>