force-app/main/default/objects/Account_History__c/fields/LS_Contract__c.field-meta.xml
<CustomField>
    <fullName>LS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LS Contract</label>
    <referenceTo>cllease__Lease_Account__c</referenceTo>
    <relationshipLabel>Account History</relationshipLabel>
    <relationshipName>Account_History</relationshipName>
    <type>Lookup</type>
</CustomField>