force-app/main/default/objects/Account_History__c/fields/Mode_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Communication__c</fullName>
    <label>Mode of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>