force-app/main/default/objects/Account_History__c/fields/Sent_History__c.field-meta.xml
<CustomField>
    <fullName>Sent_History__c</fullName>
    <label>Sent History</label>
    <type>TextArea</type>
</CustomField>